src/test/resources/frontendReference/invalid/syntaxErr/function/functionMissingCall.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 15:11 -- mismatched input '(' expecting {'-', '*', '/', '%', '+', '<', '<=', '>=', '>', '==', '!=', '&&', '||', 'end', '[', ';'}
1 parser error(s) detected, no further compilation attempted.
